--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">App Configuration for QA</string>
     <string name="execute">Execute</string>
+    <string name="name">Name</string>
     <string name="authority">Authority</string>
     <string name="values">Values</string>
     <string name="content_description_execute">Execute</string>
