add edit keyValue, set configId to not null, remove tests values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     </plurals>
     <string name="result_access_denied">Access denied.</string>
     <string name="result_exception">Failure: %1$s</string>
+
+    <string name="key_value">Key/Value</string>
+    <string name="key">Key</string>
+    <string name="value">Value</string>
 </resources>
