add clone command

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="content_description_execute">Execute</string>
     <string name="result_title">Result:</string>
     <string name="delete">DELETE</string>
+    <string name="clone">CLONE</string>
+    <string name="cloned_name">%1$s - CLONE</string>
     <plurals name="keys_count">
         <item quantity="one">%1$d key</item>
         <item quantity="other">%1$d keys</item>
