--- a/exampleapp/src/main/res/values/strings.xml
+++ b/exampleapp/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AppConfig Example App</string>
+    <string name="authority_title">Authority:</string>
+    <string name="authority">ch.pete.config</string>
+    <string name="keyValueTitle">Key/Values</string>
 </resources>
